templates/web1_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web1
  namespace: task
spec:
  selector:
    app: web1
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
