templates/web2_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web2
  namespace: task
spec:
  selector:
    app: web2
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
