templates/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress-nginx
  namespace: task
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-app.com
    http: &rules
      paths:
      - path: /web1/index.html
        backend:
          serviceName: web1
          servicePort: 80
      - path: /web2/index.html
        backend:
          serviceName: web2
          servicePort: 80
